# Python-exercicios

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: conn-postgres1.ipynb  conn-sqlalchemy.ipynb  teste-postgres.py
